content(eip1559): add api and doc links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="/static/img/favicon.ico"/>
 
-  
   <title>TxPrice</title>
   
   
@@ -277,10 +275,10 @@ function drawLineColors() {
     <div class="p-card col-4">
         <h3>TxPrice Endpoint</h3>
         <p>
+          <ul>N<a href="https://manifoldfinance.github.io/eip1559-swagger">EIP1559 Swagger</a></ul>
+           <ul><a href="https://github.com/manifoldfinance/eip1559">EIP1559 Documents</a></ul>
           <ul><a href="https:/t.me/manifoldfinance"> Manifold Telegram</a> </ul>
           <ul><a href="https:/twitter.com/foldfinance"> Manifold Twitter</a> </ul>
-        <ul>MEV Fee</ul>
-        <ul>Network Fee</ul>
         </p>
   
         <p>
@@ -289,13 +287,7 @@ function drawLineColors() {
         </p>
       </div>
   </div>
-
-
-
 </div>
-
-
-
     </div>
   </div>
 
