--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
   
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="/static/img/favicon.ico"/>
+  <link rel="icon" href="static/img/favicon.ico"/>
 
   <title>TxPrice</title>
   
   
   <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-1.8.1.min.css" />
-  <link href="/static/css/local.css" rel="stylesheet"/>
-  <link href="/static/css/pygments.css" rel="stylesheet"/>
+  <link href="static/css/local.css" rel="stylesheet"/>
 
   <!-- MetaData -->
-  <link rel="manifest" href="site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -310,9 +308,9 @@ function drawLineColors() {
   </div>
 </footer>
 
-  <script src="/static/js/jquery.min.js"></script>
-  <script src="/static/js/bootstrap-rating.min.js"></script>
-  <script src="/static/js/navigation.js"></script>
+  <script src="static/js/jquery.min.js"></script>
+  <script src="static/js/bootstrap-rating.min.js"></script>
+  <script src="static/js/navigation.js"></script>
 </div>
 </body>
 </html>
